--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Newsletter</h5>
-                        <p>We are excited to announce the opening of our new job consultancy, TalentIQ Consulting. Our team is passionate about helping individuals find their dream careers by providing top-notch job search assistance, resume building, interview coaching, career counseling, and skill development services. We believe that our job consultancy stands out from others in the market because of our personalized approach and commitment to our clients' success.
+                        <p>We are excited to announce the opening of our new job consultancy, TalentIQ Consulting. Our team is passionate about helping individuals find their dream careers by providing top-notch job search assistance. We believe that our job consultancy stands out from others in the market because of our personalized approach and commitment to our clients' success.
                           Our services are designed to help clients achieve their career goals by providing them with the necessary tools and resources to succeed..</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
@@ -174,7 +174,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Oyesjobs!</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">Oh,Yes jobs!</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. 
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>***/-->
