--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>O,yesjobs!</title>
+    <title>Oh,Yes Jobs!</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -150,7 +150,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Contact</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Laxmi Apartment Sector 99A Gurgaon</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>7464864350</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>9729525343</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>Oyesjobs@gmail.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href="https://twitter.com/oyesjobs?t=4qx0djWrbM_GEdIBxe5XOg&s=08"><i class="fab fa-twitter"></i></a>
